# ujin

./: .coverage  .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  cv.tex  docker-compose.yml  pyproject.toml  ujin-jobs.db
.github/workflows/: ci.yml
benchmarks/: _aio.py  baseline.json  test_async_paths.py  test_extract_throughput.py  test_sync_paths.py
docs/: ADAPTIVE.md  API.md  ARCHITECTURE.md  BACKENDS.md  BROWSER.md  CAPABILITIES.md  CONSUMERS.md  INGEST_PLAN.md  JOBS.md  LIST_TRANSFORMS.md  MARKETPLACE.md  MCP.md  ORCHESTRATOR.md  PERFORMANCE.md  PLUGINS.md  ROBOTS.md  TESTING.md  WORKFLOWS.md
docs/recipes/: README.md  amazon-product-prices.md  change-watching-browser.md  custom-actions-plugin.md  feed-an-llm-with-chunking.md  load-more-academic-profile.md  login-session-scraping.md  paginated-api-harvest.md
eujin/: __init__.py  cli.py  engine.py  service.py
eujin/adapt/: __init__.py  backoff.py  concurrency.py  interval.py  jitter.py
eujin/cache/: disk.py
eujin/extract/: article.py
eujin/poll/: __init__.py  api.py  base.py  callable.py  command.py  http.py  rss.py
examples/: ingest-plan.yaml  jobs.crossref.yaml  marketplace_profiles.yaml
examples/plugins/: hello_sink.py
examples/workflows/: crossref-papers.yaml  example-page.yaml  marketplace-search.yaml  site-feeds.yaml
examples/workflows/fragments/: adaptive-hourly.yaml  webhook-sink.yaml
orchestrator/: __init__.py  agents.py  config.py  config.toml  cycle.py  digest.py  gates.py  gc.py  gitutil.py  merge.py  orchestrator.py  state.py  worktree.py
orchestrator/prompts/: builder.md  integrator.md  planner.md  verifier.md
orchestrator/systemd/: ujin-orchestrator-gc.service  ujin-orchestrator-gc.timer  ujin-orchestrator.service  ujin-orchestrator.timer
orchestrator/tests/: conftest.py  test_cycle.py  test_units.py
scraperv2/: __init__.py
scraperv2/cache/: store.py
scraperv2/fetch/: http.py  obscura.py
scraperv2/sources/: discover.py  rss.py
tests/: conftest.py  test_adapt.py  test_adapt_signals.py  test_aggregate_transform.py  test_altpath.py  test_amazon_category.py  test_amazon_coverage.py  test_api_normalization.py  test_browser_fingerprint.py  test_browser_recipes.py  test_browser_source.py  test_cache.py  test_capabilities.py  test_chunk_transform.py  test_cli.py  test_consumer_contracts.py  test_cov_gap_fill.py  test_cov_scrape.py  test_cov_trends_mcp.py  test_coverage_hardening.py  test_csv_sink.py  test_description.py  test_diff.py  test_engine.py  test_engine_adaptive.py  test_engine_concurrency.py  test_engine_robots.py  test_examples_and_sdk.py  test_extract_contacts.py  test_extract_corpus.py  test_extract_coverage_hardening.py  test_extract_feeds.py  test_extract_images.py  test_extract_metadata.py  test_extract_product.py  test_extract_profile.py  test_extract_tables.py  test_fetch_http.py  test_fetch_obscura.py  test_filter_transform.py  (+50 more)
tests/fixtures/: load_more.html
tests/fixtures/feeds/: feed.xml  sitemap.xml  sitemap_news.xml
tests/fixtures/html/: article.html  contacts.html  feeds.html  images.html  js_shell.html  malformed.html  metadata.html  news_index.html  relative_links.html  tables.html
tests/integration/: test_browser_real.py
ujin/: __init__.py  auth.py  cli.py  engine.py  registry.py  robots.py  service.py
ujin/adapt/: __init__.py  backoff.py  interval.py  jitter.py  rate.py  signals.py  site_store.py  strategy.py
ujin/cache/: __init__.py  disk.py  hostpolicy.py
ujin/diff/: __init__.py  detector.py  events.py  region.py
ujin/extract/: __init__.py  article.py  contacts.py  feeds.py  images.py  links.py  metadata.py  product.py  profile.py  structured.py  tables.py
ujin/fetch/: __init__.py  altpath.py  browser.py  capabilities.py  http.py  obscura.py
ujin/jobs/: __init__.py  api_models.py  app.py  auth.py  client.py  cron.py  manager.py  model.py  pipeline.py  sinks.py  store.py  transforms.py
ujin/mcp/: __init__.py  server.py
ujin/plugins/: __init__.py  loader.py
ujin/poll/: __init__.py  amazon.py  api.py  base.py  browser.py  callable.py  command.py  graphql.py  http.py  marketplace.py  multi.py  rss.py  scrape.py  site.py
ujin/proxy/: __init__.py  pool.py
ujin/scrape/: __init__.py  app.py  build.py  config.py  host_overrides.py  metrics.py  models.py  routes.py  routes_social.py  scoring.py  service.py
ujin/session/: __init__.py  store.py
ujin/sources/: __init__.py  sitemap.py
ujin/sources/social/: __init__.py  _nitter.py  _syndication.py  mastodon.py  truth.py  twitter.py  x.py  x_trends.py
ujin/trends/: __init__.py  corroboration.py  scorer.py  tier.py
workflows/: README.md
